--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "logomaker",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
-  }
+    "name": "logomaker",
+    "version": "1.0.0",
+    "description": "A logo maker tool",
+    "main": "main.js",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "html-to-image": "^1.11.11",
+        "lucide-react": "^0.394.0",
+        "react": "^18.2.0",
+        "react-best-gradient-color-picker": "^3.0.8",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.10.1",
+        "react-router-dom": "^6.14.1"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^4.0.0",
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.4",
+        "vite": "^4.0.0"
+    },
+    "author": "Majid Ali",
+    "license": "ISC"
 }
