--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-    "name": "logomaker",
-    "version": "1.0.0",
-    "description": "A logo maker tool",
-    "main": "main.js",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "html-to-image": "^1.11.11",
-        "lucide-react": "^0.394.0",
-        "react": "^18.2.0",
-        "react-best-gradient-color-picker": "^3.0.8",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.10.1",
-        "react-router-dom": "^6.14.1"
-    },
-    "devDependencies": {
-        "@vitejs/plugin-react": "^4.0.0",
-        "autoprefixer": "^10.4.19",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.4",
-        "vite": "^4.0.0"
-    },
-    "author": "Majid Ali",
-    "license": "ISC"
+  "name": "logomaker",
+  "version": "1.0.0",
+  "description": "A logo maker tool",
+  "main": "main.js",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
+    "axios": "^1.7.2",
+    "country-state-city": "^3.2.1",
+    "html-to-image": "^1.11.11",
+    "lucide-react": "^0.394.0",
+    "react": "^18.2.0",
+    "react-best-gradient-color-picker": "^3.0.8",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "vite": "^4.0.0"
+  },
+  "author": "Majid Ali",
+  "license": "ISC"
 }
